objects/dfsle__Document__c.object
<CustomObject>
    <description>DocuSign Envelope Document</description>
    <fields>
        <fullName>dfsle__Envelope__c</fullName>
        <description>Envelope</description>
        <inlineHelpText>Envelope</inlineHelpText>
        <label>DocuSign Envelope</label>
        <referenceTo>dfsle__Envelope__c</referenceTo>
        <relationshipLabel>DocuSign Envelope Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>dfsle__Extension__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Extension</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__FullName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__IsReplacement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Replacement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__LastModified__c</fullName>
        <description>Source Last Modified</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Source Last Modified</inlineHelpText>
        <label>Source Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dfsle__Options__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Options</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__ReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read-only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__Replacement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Replacement document</inlineHelpText>
        <label>Replacement Document</label>
        <referenceTo>dfsle__Document__c</referenceTo>
        <relationshipLabel>Replacement Document</relationshipLabel>
        <relationshipName>Replacement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dfsle__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__Sequence__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Sequence</description>
        <label>Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dfsle__Size__c</fullName>
        <description>Document Size</description>
        <inlineHelpText>Document Size</inlineHelpText>
        <label>Document Size</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dfsle__SourceId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsle__Type__c</fullName>
        <description>Document Type</description>
        <inlineHelpText>Document Type</inlineHelpText>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>File</fullName>
                </value>
                <value>
                    <fullName>Template</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DocuSign Envelope Document</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Envelope Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>